# divisora-core-manager

./: .gitignore  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py  extensions.py
app/admin/: admin.py
app/admin/templates/admin/: events.html  main.html  measurements.html
app/admin/templates/admin/modal/: cubicle.html  error.html  image.html  measurement.html  node.html  status.html  user.html
app/api/: api.py
app/auth/: auth.py
app/auth/templates/auth/: login.html
app/dashboard/: dashboard.py
app/dashboard/templates/dashboard/: dashboard.html
app/models/: cubicle.py  events.py  image.py  measurements.py  network.py  node.py  user.py
app/redirect/: redirect.py
app/redirect/templates/redirect/: not_ready.html
app/static/css/: dashboard.css  modal.css  style.css
app/static/icons/: material.css
app/tasks/: schedule.py
app/templates/: 404.html  base.html
app/types/: ip_network.py
examples/: docker-compose.yml
