[project]
name = "divisora-core-manager"
version = "1.0.0"
description = "The Core Manager in Divisora project"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "flask>=2.2.2",
    "celery[redis]>=5.2.7",
    "Flask-Login>=0.6.2",
    "Flask-SQLAlchemy>=3.0.3",
    "sqlalchemy_utils>=0.40.0",
    "passlib>=1.7.4",
    "waitress>=2.1.2",
    "pyotp>=2.8.0",
    "qrcode>=7.4.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"